# ccxx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ccxx_qt_projects.pri  ccxx_qt_projects.pro  ccxx_vc_projects-vs10.sln  ccxx_vc_projects-vs9.sln  cxQtProject.pri  cxQtProjects.pro  cxVcProject-vs10.props  macos-run-snips.md  read.txt  readme.md  readme.sh  ubuntu-run-snips.md  windows-run-snips.md
3rd/: 3rd.cmake  CMakeLists.txt  hiredis.cmake  htop.txt  libuv-readme.txt  re2-readme.txt  uv.cmake  yamlcpp.cmake
3rd/benchmark/: CMakeLists.txt
3rd/benchmark/cmake/: HandleGTest.cmake
3rd/benchmark/src/: sysinfo.cc  timers.cc
3rd/hiredis/: CMakeLists.txt
3rd/hiredis/hiredis/: CMakeLists.txt  async.c  hiredis.h  sockcompat.c  sockcompat.h  win32.h
3rd/hiredis/hiredis-msvc/: .git.rar  .gitignore  CMakeLists.txt  COPYING  README.md  async.c  async.h  dict.c  hiredis.h  sds.h  win32_hiredis.h
3rd/hiredis/hiredis-msvc/adapters/: ae.h
3rd/hiredis/hiredis-msvc/msvs/vs-solutions/vs2013/: hiredis.vcxproj  hiredis_win.sln  win32_interop.vcxproj
3rd/hiredis/hiredis-msvc/msvs/vs-solutions/vs2015/: hiredis.vcxproj  win32_interop.vcxproj
3rd/hiredis/hiredis-msvc/msvs/win32_example/: example-ae-win.c
3rd/hiredis/hiredis-msvc/msvs/win32_example/vs2013/: win32_example.sln  win32_example.vcxproj
3rd/hiredis/hiredis-msvc/msvs/win32_example/vs2015/: win32_example.sln  win32_example.vcxproj
3rd/htop/: CMakeLists.txt  htop.cmake  htop.txt  readme.sh  top-111.220.1.tar.gz-by-apple.txt  top-3.8beta1.tar.gz.txt
3rd/htop/ccxx/: CMakeLists.txt  main_htop.c  main_process_list1.c
3rd/htop/dll/: CMakeLists.txt
3rd/htop/htop/: Settings.c
3rd/htop/main/: CMakeLists.txt
3rd/libuv/: CMakeLists.txt
3rd/libuv-2018-04-26/: CMakeLists.txt
3rd/libuv/libuv-2018-04-26/: CMakeLists.txt
3rd/libuv/libuv-2018-04-26/test/: test-spawn.c
3rd/lua/: lua-readme.txt
3rd/lua-5.3.4/src/: lua.pri
3rd/re2/: CMakeLists.txt
3rd/re2/re2/: CMakeLists.txt  Makefile
3rd/yaml-cpp/yaml-cpp/: CMakeLists.txt
3rd/yaml-cpp/yaml-cpp/test/: CMakeLists.txt
benchmark/: benchmark.sh
benchmark/cxstring/: type2string.cc
ccxx/: ccxx.cmake  ccxx.h  ccxx.pri  ccxx.vcproj  ccxx_env.pri  ccxx_environment.pri  ccxx_interinfo.pri  ccxx_oci.pri  ccxx_odbc.pri  ccxx_qt.pri  ccxx_simple.pri  ccxx_sqlite3.pri  ccxx_v10.vcxproj  ccxx_vs10.vcxproj  ccxx_vs9.vcproj  cxappenv.cpp  cxappenv.h  cxapplication.cpp  cxapplication.h  cxapplication_qt.cpp  cxapplication_qt.h  cxapplication_wrap.cxx  cxbitmap.cpp  cxbitmap.h  cxbuffer.cpp  cxbuffer.h  cxbusiness.cpp  cxbusiness.h  cxchannel.cpp  cxchannel.h  cxchannel_factorymanager.cpp  cxchannel_global.h  cxchannel_none.cpp  cxchannel_none.h  cxchannel_serial.cpp  cxchannel_serial.h  cxchannel_tcpclient.cpp  cxchannel_tcpclient.h  cxchannel_tcpserver.cpp  cxchannel_tcpserver.h  (+127 more)
ccxx/backup/: cxapplication.i  cxapplication.i.rar  cxchannel_serial.cpp  cxchannel_serial.h  cxchannel_serial.rar  cxsemipc.cpp  cxuuid.cpp  cxuuid.h
ccxx/cxlua/: lua_base.cpp  lua_cxappenv.h  lua_cxencoding.cpp  lua_cxencoding.h  lua_cxfilesystem.cpp  lua_cxfilesystem.h  lua_cxinterinfo.cpp  lua_cxjson.cpp  lua_cxjson.h  lua_cxodbc.cpp  lua_cxstring.cpp  lua_run.cpp  lua_run.h
ccxx/cxpython/: cxpy_noddy2.cpp  setup.py
ccxx/fastcgi/: fastcgi.pri
ccxx/googletest/: googletest.pri
ccxx/mysql/: my_global.h  mysql.pri
ccxx/oci/: nzerror.h  occiData.h  oci.h  ociap.h  ocixmldb.h  ocixstream.h  odci.h
ccxx/old/: cxsemipc.h
ccxx/otl/: otlv4.h
ccxx/rapidjson/: document.h  reader.h
ccxx/regexp/: CMakeLists.txt  re2.pri
ccxx/tinyxml/: tinyxml.h
cxlua/: lua_base.cpp  lua_base.h  lua_common.cpp  lua_common.h  lua_cxappenv.cpp  lua_cxappenv.h  lua_cxapplication.cpp  lua_cxapplication.h  lua_cxencoding.h  lua_cxfilesystem.h  lua_cxinterinfo.h  lua_cxjson.cpp  lua_cxlog.cpp  lua_cxlog.h  lua_cxodbc.h  lua_cxstring.h  lua_cxtime.cpp  lua_cxtime.h  lua_run.cpp  lua_run.h
cxpython/: cxpy_module.cpp  cxpy_noddy2.h  test.py
dll/: dll.pro
dll/ccxx_qt/: ccxx_qt.pro
dll/ccxx_standard/: ccxx_standard.pro
dll/cmd/: cmd.bat  cmd.cpp  cmd.h  cmd.pro  cmd.sh
gtest/: CMakeLists.txt
gtest/ccxx/: CMakeLists.txt
gtest/ccxx/cxstring/: fromHexstring.cpp
gtest/cxfile/: file_lift_cycle.cpp
gtest/googletest/: CMakeLists.txt
gtest/googletest/googlemock/src/: gmock_main.cc
gtest/googletest/googletest/: CMakeLists.txt
gtest/googletest/googletest/src/: gtest_main.cc
gtest/module_mock/: CMakeLists.txt
gtest/module_mock/include/: account.h  account_manager.h
gtest/module_mock/src/: account_service.cc
gtest/module_mock/test/: CMakeLists.txt  test_account.cc
gtest/test/: CMakeLists.txt
gtest/test/module_mock/include/: account_service.h
gtest/test/module_mock/src/: CMakeLists.txt  account.cc
gtest/test/module_mock/test/: test_account.cc
man/: env.sh  posix.sh
man/cross_compiler-aarch64/: cross_compiler-aarch64.sh  gnueabihf.md
old/: cxuuid.rar
sample/callpython/: callpython.sh  main.cpp  module1.cpp  module1.h  multiply.py
sample/cmd/: cmd.pri  main.cpp
sample/env/: env.pri  main.cpp
sample/interinfo/: interinfo.pri  main.cpp
sample/lua/: main.cpp
sample/opencv/: CMakeLists.txt  videocapture_starter.cpp
sample/qt/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt.pri
sample/simple/: main.cpp
test/: test.pro
test/a/: a.pri  a.pro  test_xxx1.cpp  test_xxx2.cpp
test/algorithm/: binaryTree_maxPath1.hpp  binaryTree_sum1.hpp  binaryTree_to_linkedlist1.hpp  binaryTree_to_linkedlist2.hpp  binaryTree_traversal1.hpp  eight_queens1.hpp  fibonacci_polynomial1.hpp  kSmallNums.hpp  list_intersect1.hpp  main.cpp  question1.txt  spanning_tree1.hpp  string_match1.hpp
test/application/: application.pri  application.pro  main.cpp  testApplication1.cpp  testApplication2.cpp
test/c/: a.out  hello1.c  union1.c
test/ccxx/: main.cpp  temp1.pro
test/channel/: channel.pri  general_psm_datatype.cpp  general_psm_datatype.h  main.cpp  main_channel_tcpclient1.cpp  main_channel_tcpclient2.cpp  main_channel_tcpserver1.cpp  main_win32_tcp1.cpp  (+15 more)
tools/: tools.pro
(+1199 files in other folders)
